Bug 1833030. Don't use native_srgb on Windows. r=jgilbert

There was confusion about the purpose of this pref. Just hard code
it for now.

Differential Revision: https://phabricator.services.mozilla.com/D178355